# blaze

./: .env  .gitignore  ;  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ]  test.bson
.github/workflows/: code.yml  windows.yml
appearance/.github/workflows/: linux.yml  macos.yml
blaze/: manage.blz
datablaze/: manage.blz
db/datablaze/: manage.blz
src/: lexer.rs  lib.rs  main.rs  prelude.rs
src/db/: create_db.rs  filesystem.rs
src/fs/: filesystem.rs
src/routine/: formatting.rs  info_channel.rs  mod.rs
src/scripting/: context.rs  executor.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
src/scripting/ast/: arguments.rs  binary_operator.rs  binary_operator_node.rs  body.rs  boolean.rs  boolean_node.rs  call.rs  conditional_tree.rs  expression.rs  expression_node.rs  function_declaration.rs  function_node.rs  functional_return.rs  identifier.rs  loop_control.rs  member.rs  mod.rs  new_variable_node.rs  node.rs  null.rs  null_node.rs  number.rs  number_node.rs  object.rs  object_node.rs  parameter.rs  statements.rs  statements_node.rs  string.rs  string_node.rs  tokens.rs  unary_operator.rs  variable_declaration.rs  variable_node.rs  while_loop.rs
src/server/: args_parser.rs  client_connection.rs  client_session.rs  config.rs  header_parsing.rs  headers.rs  instance.rs  management.rs  mod.rs  runtime_config.rs  server_bz.rs
src/shell/: command_handler.rs  handling.rs  mod.rs
tests/: test.rs
