[package]
name = "blaze"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
bson = "2.10"
uuid = "1.8.0"
ctrlc = "3.4.4"
rand = "0.8"
strum = "0.26"
chrono = "0.4.38"
colored = "2.1.0"
strum_macros = "0.26"
dotenvy = "0.15"
crossbeam = "0.8.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
